--- a/atv-1/style.css
+++ b/atv-1/style.css
@@ -59,5 +59,23 @@ h4 {
     width: 50%;
 }
 
-@media celular and (min-width = 600px) {   
+/* celular */
+@media (max-width: 768px){
+    .hero-title {
+        font-size: 54px;
+    }
+    .content-block{
+        padding: 0 24px;
+        flex-direction: column;
+    }
+    .content-wrapper {
+        width: 100%;
+    }
+}
+
+/* tablet em retrato*/
+@media (min-width: 768px) and (max-width: 900px){
+    .hero-title {
+        color: red;
+    }
 }
